# weather-forecast

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cc
include/weather_forecast/: city_coordinates_provider.h  location.h  weather_forecast_provider.h
include/weather_forecast/network/: city.h  city_coordinates_provider.h
src/: CMakeLists.txt  city_coordinates_provider.cc  weather_forecast_provider.cc
src/network/: city.cc  city_coordinates_provider.cc
